* Moved to new build-environment.

--- a/rstore-support/lib/Makefile.am
+++ b/rstore-support/lib/Makefile.am
@@ -1,10 +1,11 @@
 # $Id$
 
-#pkgdata_DATA = relation-stores.jar 
+lib_LTLIBRARIES = libRStoreAPI.la 
 
-#EXTRA_DIST = relation-stores.jar 
+pkgdata_DATA = relationstores.jar 
+data_DATA = relationstores.jar
+EXTRA_DIST = relationstores.jar 
 
-lib_LIBRARIES = libRStoreAPI.a 
 
 include_HEADERS = \
 	RStore.h \
@@ -12,20 +13,23 @@ include_HEADERS = \
 	ParsedRStore.h \
 	ParsedRStore_dict.h 
 
-libRStoreAPI_a_SOURCES = \
+libRStoreAPI_la_SOURCES = \
 	RStore.c \
 	RStore_dict.c \
 	ParsedRStore.c \
 	ParsedRStore_dict.c 
 
-INCLUDES = -I${ATERM}/include
+libRStoreAPI_la_CPPFLAGS = $(ATERM_CFLAGS)
+libRStoreAPI_la_LDFLAGS  = -avoid-version -no-undefined $(AM_LDFLAGS)
+libRStoreAPI_la_LIBADD = $(ATERM_LIBS)
+
 
 if MAINTAINER_MODE
 #CFLAGS += -DDISABLE_DYNAMIC_CHECKING
 
 BASIC_MODULES = RStores StrCon BoolCon NatCon IdentifierCon IntCon Whitespace Locations Areas
 
-api: parsed-api imploded-api # java-api
+api: parsed-api imploded-api java-api
 
 ABS_MODULES = \
 	$(foreach i, \
