--- a/rstore-support/relation-stores.pc.in
+++ b/rstore-support/relation-stores.pc.in
@@ -4,9 +4,10 @@ Maintainers=jurgenv@cwi.nl
 Name: relation-stores
 Version: 0.1
 Description: API's for Rstores.
-Requires: aterm
+Requires: aterm,toolbuslib
 Cflags: -I${prefix}/include
 Libs: -L${prefix}/lib -lRStoreAPI
 #uninstalled Libs: -L@abs_top_builddir@/lib -lRStoreAPI
 #uninstalled Cflags: -I@abs_top_builddir@/lib
 Jars=${prefix}/share/relationstores.jar
+ToolBusFlags=-I${prefix}/share/relation-stores
