--- a/rstore-support/utils/lower-rstore/Makefile.am
+++ b/rstore-support/utils/lower-rstore/Makefile.am
@@ -3,17 +3,25 @@ bin_PROGRAMS=lower-rstore
 
 AM_CPPFLAGS = \
 	-I${top_srcdir}/lib \
+	${TOOLBUSLIB_CFLAGS}
 	${ATERM_CFLAGS}
 
 lower_rstore_SOURCES=\
-	lower-rstore.c
+	lower-rstore.c \
+	lower-rstore.tif.c 
+
+noinst_HEADERS=\
+	lower-rstore.tif.h
 
 lower_rstore_LDADD=\
 	-L${top_builddir}/lib -lRStoreAPI \
+	${TOOLBUSLIB_LIBS} \
 	${ATERM_LIBS}
 
+pkgdata_DATA = lower-rstore.idef
+
 ERRORS=
-EXTRA_DIST=$(wildcard *.ref) $(wildcard *.tree)
+EXTRA_DIST=$(wildcard *.ref) $(wildcard *.tree) lower-rstore.idef.src
 
 GENERATED_BY_TESTS = 
 
@@ -27,3 +35,13 @@ TESTS=$(foreach e, ${ERRORS}, $e.sh)
 		echo "./lower-rstore -i ${srcdir}/$*.tree -o $*.trm";\
 		echo "${ATERM_PREFIX}/bin/atdiff ${srcdir}/$*.ref $*.trm"\
 	) > $@ && chmod +x $@	
+
+%.idef: %.idef.src
+	sed 's@__PREFIX__@${prefix}@g' < $< > $@
+
+if MAINTAINER_MODE
+
+tif: lower-rstore.idef
+	toolbus -gentifs $< 
+	tifstoc -tool lower-rstore lower-rstore.idef.tifs
+endif
