--- a/rstore-support/utils/lower-rstore/Makefile.am
+++ b/rstore-support/utils/lower-rstore/Makefile.am
@@ -1,17 +1,15 @@
+include $(top_srcdir)/Makefile.meta
 
 bin_PROGRAMS=lower-rstore
 
-AM_CPPFLAGS = \
+AM_CPPFLAGS += \
 	-I${top_srcdir}/lib \
 	${TOOLBUSLIB_CFLAGS}
 	${ATERM_CFLAGS}
 
 lower_rstore_SOURCES=\
-	lower-rstore.c \
-	lower-rstore.tif.c 
-
-noinst_HEADERS=\
-	lower-rstore.tif.h
+	lower-rstore.idef \
+	main.c 
 
 lower_rstore_LDADD=\
 	-L${top_builddir}/lib -lRStoreAPI \
@@ -21,7 +19,7 @@ lower_rstore_LDADD=\
 pkgdata_DATA = lower-rstore.idef
 
 ERRORS=
-EXTRA_DIST=$(wildcard *.ref) $(wildcard *.tree) lower-rstore.idef.src
+EXTRA_DIST=$(wildcard *.ref) $(wildcard *.tree) 
 
 GENERATED_BY_TESTS = 
 
@@ -36,12 +34,3 @@ TESTS=$(foreach e, ${ERRORS}, $e.sh)
 		echo "${ATERM_PREFIX}/bin/atdiff ${srcdir}/$*.ref $*.trm"\
 	) > $@ && chmod +x $@	
 
-%.idef: %.idef.src
-	sed 's@__PREFIX__@${prefix}@g' < $< > $@
-
-if MAINTAINER_MODE
-
-tif: lower-rstore.idef
-	toolbus -gentifs $< 
-	tifstoc -tool lower-rstore lower-rstore.idef.tifs
-endif
