fix isrc in SOURCES

--- a/rstore-support/utils/lower-rstore/Makefile.am
+++ b/rstore-support/utils/lower-rstore/Makefile.am
@@ -8,7 +8,7 @@ AM_CPPFLAGS += \
 	${ATERM_CFLAGS}
 
 lower_rstore_SOURCES=\
-	lower-rstore.idef \
+	lower-rstore.isrc \
 	main.c 
 
 lower_rstore_LDADD=\
