* lib/lift.c: made robust lifting of RStores. The illegal parts of an RStore    are replaced by default values, and a message is printed on the console.

--- a/rstore-support/lib/Makefile.am
+++ b/rstore-support/lib/Makefile.am
@@ -19,7 +19,8 @@ libRStoreAPI_la_SOURCES = \
 	RStore_dict.c \
 	ParsedRStore.c \
 	ParsedRStore_dict.c  \
-	lower.c
+	lower.c \
+	lift.c
 
 libRStoreAPI_la_CPPFLAGS = $(ATERM_CFLAGS)
 libRStoreAPI_la_LDFLAGS  = -avoid-version -no-undefined $(AM_LDFLAGS)
