--- a/rstore-container/rstore-container.pc.in
+++ b/rstore-container/rstore-container.pc.in
@@ -3,7 +3,7 @@ prefix=@prefix@
 Name: rstore-container
 Version: 1.0
 Description: 
-Requires: aterm-java,config-support,toolbus-java-adapter,meta-studio,tunit,relation-stores
+Requires: aterm-java,config-support-java,toolbus-java-adapter,meta-studio,tunit,relation-stores
 Maintainers=jurgenv@cwi.nl
 JarFile=rstore-container.jar
 Jars=${prefix}/share/${JarFile}:${prefix}/share/log4j-1.2.14.jar:${prefix}/share/junit.jar:${prefix}/share/commons-logging-1.1.jar
