--- a/rstore-container/rstore-container.pc.in
+++ b/rstore-container/rstore-container.pc.in
@@ -9,6 +9,6 @@ JarFile=rstore-container.jar
 Jars=${prefix}/share/${JarFile}:${prefix}/share/log4j-1.2.14.jar:${prefix}/share/junit.jar:${prefix}/share/commons-logging-1.1.jar
 LocalJars=./lib/log4j-1.2.14.jar:./lib/junit.jar:./lib/commons-logging-1.1.jar
 MainClass=nl.cwi.sen1.visbase.rstorecontainer.RStoreContainer
-Packages=nl.cwi.sen1,nl.cwi.sen1.visbase,nl.cwi.sen1.visbase.rstorecontainer,nl.cwi.sen1.visbase.rstorecontainer.datatypes 
+Packages=nl.cwi.sen1.visbase.rstorecontainer,nl.cwi.sen1.visbase.rstorecontainer.datatypes 
 TestClass=
 ToolBusFlags=-I${prefix}/share/rstore-container
